<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/moviesFragment">

    <fragment
        android:id="@+id/moviesFragment"
        android:name="com.tmdb.movies.demo.views.fragments.MoviesFragment"
        android:label="@string/label_movies"
        tools:layout="@layout/fragment_movies">
        <action
            android:id="@+id/action_homeFragment_to_movieDetailsFragment"
            app:destination="@id/movieDetailsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_homeFragment_to_searchFragment"
            app:destination="@id/searchFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

    </fragment>


    <fragment
        android:id="@+id/movieDetailsFragment"
        android:name="com.tmdb.movies.demo.views.fragments.MovieDetailsFragment"
        android:label="@string/label_movie_details"
        tools:layout="@layout/fragment_movie_details">

        <argument
            android:name="movieId"
            app:argType="integer" />

    </fragment>


    <fragment
        android:id="@+id/searchFragment"
        android:name="com.tmdb.movies.demo.views.fragments.SearchMoviesFragment"
        android:label="@string/label_search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_homeFragment_to_movieDetailsFragment"
            app:destination="@id/movieDetailsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

    </fragment>


</navigation>