<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/background_style"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="@dimen/back_button_size"
                android:layout_height="@dimen/back_button_size"
                android:layout_marginVertical="@dimen/back_button_margin"
                android:contentDescription="@string/content_description_back"
                android:padding="@dimen/back_button_padding"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/movie_search_view_margin_start"
                android:layout_marginEnd="@dimen/movie_search_view_margin_end"
                android:background="@drawable/bg_search"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                app:queryBackground="@android:color/transparent"
                android:hint="@string/hint_search"
                android:inputType="text"
                android:lines="1"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_back"
                app:layout_constraintTop_toTopOf="@+id/iv_back" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/movie_list_padding"
        android:clipToPadding="false"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:spanCount="2"
        tools:listitem="@layout/list_item_movies_search" />

    <TextView
        android:id="@+id/tv_result"
        style="@style/text_style_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/movie_title_side_margin"
        android:contentDescription="@string/app_name"
        android:text="@string/label_no_result"
        android:visibility="gone"
        android:textColor="@color/text_color_light"
        android:textSize="@dimen/movie_title_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>